split listing row into multiple partials

--- a/assets/scss/modules/listing/_row.scss
+++ b/assets/scss/modules/listing/_row.scss
@@ -1,8 +1,6 @@
 //** Lisitng | Row
 
 .listing__row{
-  transition: all 0.2s ease-in-out;
-  transform-origin: center;
   box-shadow: $card-box-shadow;
   background: var(--foreground);
   border-radius: $border-radius;
@@ -101,6 +99,7 @@
       color: theme-color('secondary');
     }
   }
+
   &--move{
     flex: 0 0 15px;
     padding: 0;
@@ -127,5 +126,54 @@
         color: var(--secondary);
       }
     }
+    &--quickedit{
+      background: transparent;
+      border: 0;
+      color: var(--primary);
+      padding: 0;
+      &:hover{
+        cursor: pointer;
+        text-decoration: underline;
+      }
+    }
   }
+}
+
+.quickedit__row{
+  min-height: 200px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  background: var(--foreground);
+  margin-bottom: $spacer / 1.25;
+  width: 100%;
+  &--item{
+    padding: $spacer;
+    &.is-content{
+      
+    }
+    &.is-actions{
+      background: var(--shade-100);
+      display: flex;
+      align-items: center;
+      padding: $spacer / 2;
+      justify-content: space-between;
+    }
+  }
+}
+
+.listing--container{
+  position: relative;
+  overflow: hidden;
+}
+
+.quickeditor-enter-active, .quickeditor-leave-active { 
+  transition: transform 0.45s, opacity 0.25s; 
+}
+
+.quickeditor-enter, .quickeditor-leave-to{
+  opacity: 0;
+  transform: translateY(30px);
+  transform-origin: top;
+  position: absolute;
 }
