--- a/assets/scss/modules/listing/_filter.scss
+++ b/assets/scss/modules/listing/_filter.scss
@@ -56,8 +56,9 @@
         }
       }
       &.is-selected{
+        background: var(--primary);
         svg g{
-          fill: var(--primary);
+          fill: var(--foreground);
         }
       }
       &.is-active{
