--- a/templates/_partials/_content_listing.twig
+++ b/templates/_partials/_content_listing.twig
@@ -6,17 +6,17 @@
     <draggable :options="{handle:'.listing__row--move', animation: 0}">
         {% for record in records %}
           <listing-row
-              :id="'{{ record.id }}'"
-              :definition="{{ record.definition|json_encode() }}"
-              :excerpt="{{ record.excerpt(150, true)|json_encode() }}"
-              :status="'{{ record.status }}'"
-              :thumbnail="'{{ record.image|thumbnail(150, 100) }}'"
-              :date="{
-              published: '{{ record.publishedAt|localizeddate('medium', 'none', null, 'UTC') }}',
-              created: '{{ record.datecreated|date("Y-m-d H:i") }}',
-              changed: '{{ record.datechanged|date("Y-m-d H:i") }}'
-              }"
-              author="{{record.author}}"
+            :record-id="'{{ record.id }}'"
+            :definition="{{ record.definition|json_encode() }}"
+            :excerpt="{{ record.excerpt(150, true)|json_encode() }}"
+            :status="'{{ record.status }}'"
+            :thumbnail="'{{ record.image|thumbnail(150, 100) }}'"
+            :date="{
+            published: '{{ record.publishedAt|localizeddate('medium', 'none', null, 'UTC') }}',
+            created: '{{ record.datecreated|date("Y-m-d H:i") }}',
+            changed: '{{ record.datechanged|date("Y-m-d H:i") }}'
+            }"
+            author="{{record.author}}"
           >
           </listing-row>
         {% endfor %}
