--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -56,7 +56,7 @@
     <!-- Admin Main -->
     <div class="admin__body" id="{% block container %}content{% endblock %}">
         <div class="container">
-            <div class="admin__body--container">
+            <div class="admin__body--container" id="{% block vue_id %}{% endblock %}">
                 <main class="admin__body--main">
                     {% block main %}
                     {% endblock %}
