Adding `jsonrecords()` twig function.

--- a/templates/_partials/_content_listing.twig
+++ b/templates/_partials/_content_listing.twig
@@ -1,3 +1,5 @@
+{# @Jack: This twig function gives JSON for the current `records` #}
+{{ jsonrecords(records) }}
 
 {% if records %}
     <nav class="listing__filter">
