added New Encore version

--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -9,9 +9,9 @@
     {% block stylesheets %}
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Source+Sans+Pro:300,400,600&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ asset('assets/bolt.css') }}">
-    {% set backendTheme = 'assets/theme-' ~ user.backendTheme|default('default') ~ '.css' %}
-    <link id="theme" rel="stylesheet" type="text/css" href="{{ asset(backendTheme) }}">
+    {% set theme = 'theme-' ~ user.backendTheme|default('default') %}
+    {{ encore_entry_link_tags('bolt') }}
+    {{ encore_entry_link_tags(theme) }}
     {% endblock %}
 </head>
 
@@ -86,9 +86,7 @@
         }
 
     </script>
-    <script src="{{ asset('assets/manifest.js') }}"></script>
-    <script src="{{ asset('assets/vendor.js') }}"></script>
-    <script src="{{ asset('assets/bolt.js') }}"></script>
+    {{ encore_entry_script_tags('bolt') }}
 {% endblock %}
 
 </body>
