--- a/templates/content/listing.twig
+++ b/templates/content/listing.twig
@@ -18,10 +18,10 @@
 
 {% block aside %}
 
-    <listing-selected-box
+    <listing-select-box
       ct="{{ contenttype.name }}"
       ct-singular="{{ contenttype.singular_name }}"
-    ></listing-selected-box>
+    ></listing-select-box>
 
     <div class="card">
         <div class="card-header">
