--- a/templates/_partials/_content_listing.twig
+++ b/templates/_partials/_content_listing.twig
@@ -1,14 +1,23 @@
-{# @Jack: This twig function gives JSON for the current `records` #}
-{{ jsonrecords(records) }}
+
+
 
 {% if records %}
-    <nav class="listing__filter">
-      <listing-filter
-        type="{{ type }}"
-      ></listing-filter>
-    </nav>
+    <!-- listing records -->
+    <listing-records
+      type="{{ type }}"
+      :data="{{ jsonrecords(records) }}"
+    >
+    </listing-records>
+    <!-- end listing records -->
 
-    <draggable :options="{handle:'.listing__row--move', animation: 0}">
+    <!-- listing filter -->
+    <listing-filter></listing-filter>
+    <!-- end listing filter -->
+
+    <listing-table ></listing-table>
+    
+    {# <draggable :options="{handle:'.listing__row--move', animation: 0}">
+
         {% for record in records %}
           <listing-row
             type="{{ type }}"
@@ -26,7 +35,8 @@
           >
           </listing-row>
         {% endfor %}
-    </draggable>
+    </draggable> #}
+
     <nav class="listing__filter">
       {% include '@bolt/_partials/_pager.twig' with { 'records': records } %}
     </nav>
