--- a/templates/finder/finder.twig
+++ b/templates/finder/finder.twig
@@ -27,33 +27,45 @@
 
     {% include '@bolt/finder/_uploader.twig' %}
 
-
-
 {% endblock aside %}
 
 {% block stylesheets %}
-    {{ parent() }}
+   {{ parent() }}
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.min.css" integrity="sha256-EhmqrzYSImS7269rfDxk4H+AHDyu/KwV1d8FDgIXScI=" crossorigin="anonymous" />
-    <style>
+   <style>
         .filepond--root {
             margin-bottom: 0 !important;
         }
     </style>
 {% endblock %}
 
-
 {% block javascripts %}
     {{ parent() }}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js" integrity="sha256-+C0A5Ilqmu4QcSPxrlGpaZxJ04VjsRjKu+G82kl5UJk=" crossorigin="anonymous"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             $('#quickselect').selectize({
                 create: true,
                 sortField: 'text',
-                maxItems: null,
-                closeAfterSelect: true
+                maxItems: 1,
+                closeAfterSelect: true,
+                options: [
+                    {% for file in allfiles %}
+                    {value: '{{ file.filename }}', description: '{{ file.description }}'},
+                    {% endfor %}3
+                ],
+                render: {
+                    option: function(data) {
+                        return "<div data-value='"+data.value+"' class='option'>" +
+                            data.value +
+                            " <small> " + data.description + " </small></div>";
+                    },
+                    item: function(data) {
+                        return "<div data-value='"+data.value+"' class='option'>" +
+                            data.value +
+                            " <small> " + data.description + " </small></div>";
+                    }
+                }
             });
         });
 
