--- a/templates/finder/finder.twig
+++ b/templates/finder/finder.twig
@@ -52,7 +52,7 @@
                 options: [
                     {% for file in allfiles %}
                     {value: '{{ file.filename }}', description: '{{ file.description }}'},
-                    {% endfor %}3
+                    {% endfor %}
                 ],
                 render: {
                     option: function(data) {
