fixed draggable options

--- a/templates/content/listing.twig
+++ b/templates/content/listing.twig
@@ -19,8 +19,8 @@
 {% block aside %}
 
     <listing-select-box
-      ct="{{ contenttype.name }}"
-      ct-singular="{{ contenttype.singular_name }}"
+      plural="{{ contenttype.name }}"
+      singular="{{ contenttype.singular_name }}"
     ></listing-select-box>
 
     <div class="card">
