--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -43,11 +43,9 @@
     <div class="admin__sidebar">
         <div id="sidebar">
             <admin-sidebar
-                :brand-full="'{{ asset('assets/images/brand-long.svg') }}'"
-                :brand-icon="'{{ asset('assets/images/brand-icon.svg') }}'"
-                :menu="{{ sidebarmenu() }}"
-                :version="'{{ version|default('unknown')|replace({'alpha': 'α', 'beta': 'β'}) }}'"
-                :about-link="{{ path('bolt_about')|json_encode }}"
+              :menu="{{ sidebarmenu() }}"
+              :version="'{{ version|default('unknown')|replace({'alpha': 'α', 'beta': 'β'}) }}'"
+              :about-link="{{ path('bolt_about')|json_encode }}"
             ></admin-sidebar >
         </div>
     </div>
@@ -79,12 +77,10 @@
 {% block javascripts %}
     <script>
         var admin = document.querySelector('.admin');
-        var size = localStorage.getItem('admin-sidebar-size');
-
-        if (size !== null && size === 'slim'){
-            admin.classList.add('is-slim');
+        var slim = JSON.parse(localStorage.getItem('slim-sidebar'));
+        if (slim){
+          admin.classList.add('is-slim');
         }
-
     </script>
     {{ encore_entry_script_tags('bolt') }}
 {% endblock %}
