--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -66,7 +66,7 @@
 
                     {% endblock %}
                 </aside>
-                <div id="notifications">
+                <div class="admin__notification">
                     {{ include('_partials/_flash_messages.twig') }}
                 </div>
             </div>
