--- a/templates/bundles/ApiPlatformBundle/SwaggerUi/index.html.twig
+++ b/templates/bundles/ApiPlatformBundle/SwaggerUi/index.html.twig
@@ -1,9 +1,9 @@
 {% extends '@bolt/_base/layout.twig' %}
 
-{% block container "widecontent" %}
+{% block container "is-wide" %}
 
 {% block title %}
-    Bolt API Platform
+    <i class='fas fa-code'></i> <strong>Bolt API</strong>
 {% endblock %}
 
 {% block main %}
