--- a/assets/scss/layout/_admin.scss
+++ b/assets/scss/layout/_admin.scss
@@ -55,23 +55,22 @@ $admin-header-height: 70px;
     flex: 1;
     grid-area: body;
     padding-top: 0;
+    &.is-wide{
+      .admin__body--container{
+        grid-template-columns:  auto;
+        grid-template-areas:    "main"
+                                "aside";
+      }
+    }
     >.container{
       padding: 0;
     }
     &--container{
       display: grid;
       grid-template-columns:  auto $admin-sidebar-width * 1.25;
-      grid-template-areas:    "main    aside"
-                              "flashes aside";
+      grid-template-areas:    "main    aside";
       padding: $spacer * 2;
     }
-
-    &--flashes{
-      grid-area: flashes;
-      min-width: 0;
-      padding-right: $spacer * 2;
-    }
-
 
     &--main{
       grid-area: main;
