Stack multiple notifications verticaly. Fixes #96

--- a/assets/scss/modules/base/_notification.scss
+++ b/assets/scss/modules/base/_notification.scss
@@ -1,21 +1,29 @@
 //** Base | Notification
-
-.notification {
+.admin__notifications {
+  display: block;
   -webkit-backface-visibility: hidden;
   z-index: 2000;
   position: fixed;
   bottom: $spacer * 2;
   right: $spacer * 2;
-  width: 440px;
-
+}
+.admin__notification-message {
+  display: flex !important;
+  align-items: center;
+}
+.notification {
+  position: relative;
   background: var(--body);
-  display: flex;
-  padding: $spacer;
+  padding: $spacer $spacer;
+  margin-bottom: $spacer * .5;
   border-radius: $border-radius;
   box-shadow: $card-box-shadow;
   color: var(--foreground);
-  margin-bottom: $spacer;
   font-weight: $font-weight-bold;
+
+  & .notification__message {
+    float: left !important;;
+  }
 
   &[data-type='is-success'] {
     .notification__close {
@@ -27,25 +35,20 @@
       color: var(--danger);
     }
   }
-  &:last-child {
-    margin-bottom: 0;
-  }
+
   p {
     margin: 0;
     flex: auto;
   }
 
   &__close {
-    display: flex;
-    align-items: center;
-    justify-content: end;
+    float: right !important;
     background: transparent;
     border: 0;
     position: relative;
     color: var(--foreground);
     font-weight: $font-weight-bold;
     right: -$spacer / 2;
-    margin-left: $spacer;
     letter-spacing: $letter-spacing;
     text-transform: capitalize;
     &:focus {
