--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -65,7 +65,7 @@
 
                     {% endblock %}
                 </aside>
-                <div class="admin__notification">
+                <div class="admin__notifications">
                     {{ include('_partials/_flash_messages.twig') }}
                 </div>
             </div>
