Doing some work on 1i8n in core.

--- a/templates/editcontent/edit.twig
+++ b/templates/editcontent/edit.twig
@@ -32,6 +32,14 @@
               <span>{{group|capitalize}}</span></a>
           </li>
       {% endfor %}
+
+      {# Note: Record MUST be saved, before you can switch locales. #}
+      {% if record.id %}
+      <li class="nav-item" style="margin-left: auto;">
+          {% include('editcontent/localeswitcher.twig') %}
+      </li>
+      {% endif %}
+
   </ul>
 </nav>
 <div class="tab-content" id="nav-tabContent">
