Tweaking CSS for localeswitcher

--- a/templates/editcontent/localeswitcher.twig
+++ b/templates/editcontent/localeswitcher.twig
@@ -1,5 +1,5 @@
 
-<div class="selectize-control form-control single" style="min-width: 220px;">
+<div class="selectize-control form-control single">
     <select name="localeswitcher" id="localeswitcher" placeholder="{{ 'form.select_language'|trans }}">
     </select>
 </div>
