--- a/templates/editcontent/edit.twig
+++ b/templates/editcontent/edit.twig
@@ -35,7 +35,7 @@
 
       {# Note: Record MUST be saved, before you can switch locales. #}
       {% if record.id %}
-      <li class="nav-item" style="margin-left: auto;">
+      <li class="nav-item localeswitcher">
           {% include('editcontent/localeswitcher.twig') %}
       </li>
       {% endif %}
