--- a/templates/users/edit.twig
+++ b/templates/users/edit.twig
@@ -7,15 +7,85 @@
 {% block body_id 'user_edit' %}
 
 {% block main %}
-    <div id="user">
-        {% form_theme form 'bootstrap_4_layout.html.twig' %}
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-primary">
-            <i class="fa fa-save" aria-hidden="true"></i> {{ 'action.save'|trans }}
-        </button>
-        {{ form_end(form) }}
-        <user-theme></user-theme>
+
+    <div>
+        <form method="post" id="editcontent" >
+
+            <div class="form-group">
+                <label for="user_username" class="required">Username</label>
+                <input type="text" id="user_username" name="user[username]" disabled="disabled" required="required" value="{{ user.username }}" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <label for="user_fullName" class="required">Full name</label>
+                <input type="text" id="user_fullName" name="user[fullName]" required="required" value="{{ user.fullName }}" class="form-control">
+            </div>
+
+            <div class="form-group">
+                {% include '@bolt/editcontent/fields/password.twig' with {
+                    'label_attr': { 'for': 'user_password_first' },
+                    'label': 'label.password'|trans,
+                    'label_class': 'required',
+                    'type': 'password',
+                    'id': 'user_password_first',
+                    'name': 'user[password_first]',
+                    'value': '',
+                    'class': 'form-control',
+                } %}
+            </div>
+
+            <div class="form-group">
+                {% include '@bolt/editcontent/fields/password.twig' with {
+                    'label_attr': { 'for': 'user_password_second' },
+                    'label': 'label.password_confirm'|trans,
+                    'label_class': 'required',
+                    'type': 'password',
+                    'id': 'user_password_second',
+                    'name': 'user[password_second]',
+                    'value': '',
+                    'class': 'form-control',
+                } %}
+            </div>
+
+            <div class="form-group">
+                {% include '@bolt/editcontent/fields/email.twig' with {
+                    'label_attr': { 'for': 'user_email' },
+                    'label': 'label.email'|trans,
+                    'label_class': 'required',
+                    'type': 'email',
+                    'id': 'user_email',
+                    'name': 'user[email]',
+                    'value': user.email,
+                    'class': 'form-control',
+                } %}
+            </div>
+
+            <div class="form-group">
+                <label for="user_locale" class="required">Locale</label>
+                <select id="user_locale" name="user[locale]" class="form-control">
+                    {% for locale in locales() %}
+                        <option value="{{ locale.code }}" {% if user.locale == locale.code %}selected="selected"{% endif %}>{{ locale.name }} ({{ locale.localisedname }}, {{ locale.code }})</option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="user_backendTheme" class="required">Backend theme</label>
+                <select id="user_backendTheme" name="user[backendTheme]" class="form-control">
+                    <option value="default" selected="selected">The Default theme</option>
+                    <option value="dark">The Default Dark theme</option>
+                    <option value="woordpers">WoordPers: Kinda looks like that other CMS</option>
+                </select>
+            </div>
+
+
+            <user-theme></user-theme>
+
+            <button type="submit" class="btn btn-primary">
+                <i class="fa fa-save" aria-hidden="true"></i> {{ 'action.save'|trans }}
+            </button>
+
+        </form>
     </div>
 {% endblock %}
 
