converted select field to vue-multiselect

--- a/assets/scss/modules/base/_status.scss
+++ b/assets/scss/modules/base/_status.scss
@@ -5,7 +5,7 @@
   height: 12px;
   border-radius: 100%;
   background: var(--shade);
-  display: inline-block;
+  display: inline-flex;
   &.is-published{
     background: var(--status-published)
   }
