fixed dep issue with selectize

--- a/templates/editcontent/edit.twig
+++ b/templates/editcontent/edit.twig
@@ -144,7 +144,7 @@
                             'label' : 'field.id' | trans,
                             'name' : 'id',
                             'value' : record.id,
-                            'attributes' : 'readonly form="editcontent"'
+                            'disabled' : true
                         } %}
 
                     </div>
