--- a/templates/editcontent/fields/text.twig
+++ b/templates/editcontent/fields/text.twig
@@ -1,9 +1,15 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
+{# check disabled #}
+{% if disabled is not defined %}
+    {% set disabled = false %}
+{% endif %}
+
 {% block field %}
     <editor-text
         :value="{{ value|json_encode() }}"
         :name="'{{ name }}'"
         :type="'{{ class }}'"
+        :disabled="'{{ disabled }}'"
     ></editor-text>
 {% endblock %}
